--- a/tool/templates/nanobind/module_impl.cpp.jinja
+++ b/tool/templates/nanobind/module_impl.cpp.jinja
@@ -1,3 +1,3 @@
 {%- for (m, p) in modules %}
-nb::module_ {{m}}_mod({{p}});
+nb::module_ {{m}}_mod = {{p}}_mod.def_submodule("{{m}}");
 {%- endfor %}
