--- a/tool/templates/nanobind/binding.cpp.jinja
+++ b/tool/templates/nanobind/binding.cpp.jinja
@@ -2,8 +2,9 @@
 #include <nanobind/stl/unique_ptr.h>
 #include <nanobind/stl/string_view.h>
 #include <nanobind/stl/optional.h>
-#include <../src/nb_internals.h>  // Required for shimming
+#include <nanobind/stl/function.h>
 
+#include <../src/nb_internals.h>  // Required for shimming
 
 {%- for include in includes %}
 #include "{{ include }}"
