--- a/tool/templates/nanobind/method_impl.cpp.jinja
+++ b/tool/templates/nanobind/method_impl.cpp.jinja
@@ -1,6 +1,9 @@
 	.def{%- for qualifier in m.pre_qualifiers -%}{%- if qualifier == "static" -%}_static{%- endif -%}{%- endfor -%}
 	("{{m.method_name}}", &{{- type_name }}::{{ m.method_name -}} 
 	{%- for param in m.method.params -%}
-	  , "{{param.name}}"_a
+	  , "{{param.name}}"_a 
+	  {%- if let Type::DiplomatOption(t) = param.ty -%}
+	  .none()
+	  {%- endif -%}
     {%- endfor -%}
 	)
